# OSVR-Core

./: CMakeLists.txt
apps/: CMakeLists.txt  osvr_print_tree.cpp
cmake/: Findjsoncpp.cmake
devtools/: CMakeLists.txt
examples/clients/: CMakeLists.txt
examples/plugin/: CMakeLists.txt  org_osvr_example_TriggerHardwareDetect.cpp
inc/osvr/Client/: ClientInterfaceObjectManager.h
inc/osvr/Common/: InterfaceCallbacks.h  InterfaceState.h  ReportMap.h  ReportState.h  ReportTraits.h  ReportTypes.h  VRPNConnectionCollection.h
inc/osvr/Kalman/: AbsoluteOrientationMeasurement.h
inc/osvr/PluginHost/: PluginSpecificRegistrationContext.h
inc/osvr/PluginKit/: PluginKit.h  PluginRegistration.h  PluginRegistrationC.h
inc/osvr/TypePack/: TypeKeyedTuple.h
inc/osvr/Util/: EigenCoreGeometry.h
plugins/: CMakeLists.txt
plugins/deadreckoningorientation/: CMakeLists.txt  com_osvr_DeadReckoningOrientation.cpp  com_osvr_DeadReckoningOrientation.json
plugins/multiserver/: CMakeLists.txt  com_osvr_Multiserver.cpp  com_osvr_Multiserver_DeadReckoning.json
plugins/unifiedvideoinertialtracker/: TrackedBodyTarget.cpp  TrackerThread.cpp  TrackerThread.h
plugins/videobasedtracker/: BeaconBasedPoseEstimator.h  BeaconBasedPoseEstimator_Kalman.cpp  LED.cpp  LED.h  VideoBasedTracker.cpp  VideoTrackerCalibrationUtility.cpp
plugins/videobasedtracker/DirectShowCameraLib/: directx_camera_server.cpp
src/osvr/: CMakeLists.txt
src/osvr/Client/: CMakeLists.txt  ClientInterfaceObjectManager.cpp  PureClientContext.cpp  PureClientContext.h  UniversalRemoteHandlerFactory.cpp
src/osvr/ClientKit/: CMakeLists.txt
src/osvr/Common/: AnalogRemoteFactory.cpp  AnalogRemoteFactory.h  ButtonRemoteFactory.cpp  ButtonRemoteFactory.h  CMakeLists.txt  DirectionRemoteFactory.cpp  DirectionRemoteFactory.h  EyeTrackerRemoteFactory.cpp  EyeTrackerRemoteFactory.h  ImagingRemoteFactory.cpp  ImagingRemoteFactory.h  Location2DRemoteFactory.h  PathElementTypes.cpp  TrackerRemoteFactory.h  VRPNConnectionCollection.cpp
src/osvr/PluginHost/: PluginSpecificRegistrationContextImpl.cpp
src/osvr/PluginKit/: CMakeLists.txt  PluginRegistrationC.cpp
src/osvr/Server/: CMakeLists.txt
src/osvr/Util/: CMakeLists.txt
tests/cplusplus/JointClientKit/: CMakeLists.txt  JointClientKitWithAsyncInterface.cpp
tests/cplusplus/TypePack/: CMakeLists.txt  TypeKeyedTuple.cpp
